@@ -1,5 +1,12 @@
 \name{NEWS}
 \title{NEWS file for the \pkg{Uniquorn} bioconductor package }
+\section{Changes in version 0.99.11 [2016-04-01]}{
+    \subsection{Fixed unit tests}{
+        \itemize{
+            \item Fixed error in unit tests
+        }
+    }
+}
 \section{Changes in version 0.99.10 [2016-03-30]}{
     \subsection{Added Unit tests}{
         \itemize{
@@ -7,7 +14,6 @@
         }
     }
 }
-\s
 \section{Changes in version 0.99.9 [2016-03-29]}{
     \subsection{Improved documentation}{
         \itemize{
